--- a/TuanQD_MockProject/app/src/main/res/values/strings.xml
+++ b/TuanQD_MockProject/app/src/main/res/values/strings.xml
@@ -15,5 +15,27 @@
     <string name="hidden_folder">Hidden Folder</string>
     <string name="scan_media">Scan Media</string>
     <!-- TODO: Remove or change this placeholder text -->
+    <string name="home_fragment">Home Fragment</string>
+    <string name="home">Home</string>
+    <string name="favorite">Favorite</string>
+    <string name="settings">Settings</string>
+    <string name="songs">Songs</string>
+    <string name="setting_fragment">Setting Fragment</string>
+    <string name="songs_fragment">Songs Fragment</string>
+    <string name="hot_recommended">Hot Recommended</string>
+    <string name="playlist">Playlist</string>
+    <string name="view_all">View All</string>
+    <string name="recently_played">Recently Played</string>
+    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="all_songs">All Songs</string>
+    <string name="playlists">Playlists</string>
+    <string name="albums">Albums</string>
+    <string name="artist">Artist</string>
+    <string name="genre">Genre</string>
+    <string name="hello_artist_fragment">Hello Artist Fragment</string>
+    <string name="hello_genre_fragment">Hello Genre Fragment</string>
+    <string name="hello_albums_fragment">Hello Albums Fragment</string>
+    <string name="hello_playlist_songs_fragment">Hello Playlist Songs Fragment</string>
+    <string name="title">title</string>
 </resources>
