--- a/TuanQD_MockProject/app/src/main/res/values/strings.xml
+++ b/TuanQD_MockProject/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="hello_albums_fragment">Hello Albums Fragment</string>
     <string name="hello_playlist_songs_fragment">Hello Playlist Songs Fragment</string>
     <string name="title">title</string>
+    <string name="fragment_music">Fragment Music</string>
 </resources>
