--- a/TuanQD_MockProject/app/src/main/res/values/strings.xml
+++ b/TuanQD_MockProject/app/src/main/res/values/strings.xml
@@ -54,4 +54,13 @@
     <string name="sound_of_life">Sound of Life</string>
     <string name="giving_heart">Giving Heart</string>
     <string name="_2017">2017</string>
+    <string name="play">Play</string>
+    <string name="play_next">Play next</string>
+    <string name="add_to_playing_queue">Add to playing queue</string>
+    <string name="add_to_playlist">Add to playlist</string>
+    <string name="rename">Rename</string>
+    <string name="tag_editor">Tag editor</string>
+    <string name="go_to_artist">Go to artist</string>
+    <string name="delete_from_device">Delete from device</string>
+    <string name="share">Share</string>
 </resources>
